# android-quickjs

./: README.md
app/: build.gradle
app/src/androidTest/java/com/quickjs/myquickjs/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/quickjs/: QuickJs.java  QuickJsApi.java
app/src/main/java/com/quickjs/myquickjs/: MainActivity.java
app/src/main/jni/: CMakeLists.txt  quickjs.cpp  quickjspp.hpp
app/src/main/jni/quickjs/: CMakeLists.txt  Toast.cpp  Toast.h  cutils.c  cutils.h  libbf.c  libbf.h  libregexp.c  libregexp.h  libunicode-table.h  libunicode.c  libunicode.h  list.h  quickjs-atom.h  quickjs-libc.c  quickjs-libc.h  quickjs.c  quickjs.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/quickjs/myquickjs/: ExampleUnitTest.java
debugapk/: app-debug.apk
gradle/wrapper/: gradle-wrapper.properties
